using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public enum GameType{
    TicTacToe,
    TickOatTwo,
    WildTicTacToe
}
