using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.SceneManagement;

public interface GameUpdateValidationRule
{
    public bool isValid();
}
