using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.SceneManagement;

public class WildBoardStateChecker : BoardStateChecker
{
    public int check(BoardState boardState, bool forReal) {
        return 0;
    }
}
